# modric-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile-py  Makefile  README.md  StartModricAgent.bat  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: bootstrap.py  logging_config.py  main.py  service.py
app/config/: loader.py  writer.py
app/core/: command.py  command_mgr.py  machine_version.py  run_script.py  updater.py  version.py
app/rest/: server.py
app/ws/: client.py
conf/: config.example.ini
scripts/: install.ps1  install.sh  release.sh
tests/unit/: test_bootstrap.py  test_client.py  test_command_mgr.py  test_machine_version.py  test_upgrade_and_config.py
