[project]
name = "modric-agent"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "websockets==12.0",
    "PyJWT==2.8.0",
    "cryptography==42.0.7",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
