[project]
name = "modric-agent"
version = "1.0.2"
requires-python = ">=3.11"
dependencies = [
    "websockets==12.0",
    "PyJWT==2.8.0",
    "cryptography==42.0.7",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
